--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -36,9 +36,6 @@
     .reviews-card{
         width: 25%;
     }
-    header{
-        margin-top: 10%;
-    }
 
 }
 
@@ -59,6 +56,7 @@
     .header-right img{
         width: 60%;
         margin: 0 auto 5% 22%;
+        margin-top: 18px;
     }
 
     .resource-container{
@@ -88,9 +86,6 @@
 
     .links-col{
         align-items: stretch;
-    }
-    header{
-        margin-top: 10%;
     }
 }
 
@@ -207,7 +202,4 @@
         margin-top: 5%;
         margin-left: 10%;
      }
-     header{
-        margin-top: 10%;
-    }
 }
